# hyperliquid-CLI

./: .gitignore  Cargo.toml  README.md
config/: default.toml
src/: cli.rs  command.rs  config.rs  handlers.rs  helpers.rs  hyperliquid.rs  lib.rs  main.rs  model.rs  settings.rs  startup.rs  types.rs
src/hyperliquid/: agent.rs  exchange.rs  info.rs  meta_info.rs  mod.rs  open_orders.rs  open_positions.rs  order.rs  order_payload.rs  order_responses.rs  types.rs
src/hyperliquid.old/: mod.rs  order.rs  order_payload.rs
