[package]
name = "hyperliquid"
version = "0.1.0"
edition = "2021"
authors = ["Ehfaz"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = "4.4.2"
config = { version = "0.13.3", default-features = false, features = ["toml"] }
ethers = { version = "2.0.9", features = ["eip712"] }
reqwest = { version = "0.11.18", default-features = false, features = ["json"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
