[package]
name = "hl"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = "4.5.9"
ethers = { version = "2.0.14", features = ["eip712"] }
home = "0.5.9"
serde = "1.0.204"
serde_json = "1.0.120"
tokio = { version = "1.38.1", features = ["macros", "rt-multi-thread"] }

[dependencies.hyperliquid]
git = "https://github.com/dennohpeter/hyperliquid.git"
branch = "main"
